# halcyon_base

./: .gitignore  README.md
include/base/: version.h
include/base/any/: any.h
include/base/base64/: base64.h
include/base/common/: base_define.h  noncopyable.cppm  noncopyable.h  platform.h
include/base/file/: file_opt.h  file_utils.h
include/base/function/: defer.h  weak_callback.h
include/base/md5/: md5.h
include/base/message/: message_bus.h
include/base/optional/: optional.h
include/base/queue/: blocking_queue.h  spsc_queue.h
include/base/range/: range.h
include/base/singleton/: singleton.h
include/base/string/: string.h  string_view.h
include/base/task/: task.h
include/base/thread/: blocking_queue.h  count_down_latch.h  thread.h  thread_pool.h  thread_task.h
include/base/time/: elapsed_timer.h  timestamp.h
include/base/utility/: bind.h  coding.h  type.h  utility.h
include/base/variant/: variant.h
project/: CMakeLists.txt
project/vs2022/: base.sln  base.vcxproj  base.vcxproj.filters  ut.vcxproj  ut.vcxproj.filters
src/: version.cpp
src/base64/: base64.cpp
src/file/: file_opt.cpp  file_utils.cpp
src/md5/: md5.cpp
src/thread/: thread_pool.cpp
test/: CMakeLists.txt  ut_any.cpp  ut_base64.cpp  ut_bind.cpp  ut_blocking_queue.cpp  ut_count_down_latch.cpp  ut_defer.cpp  ut_elapsed_timer.cpp  ut_file_opt.cpp  ut_file_utils.cpp  ut_md5.cpp  ut_message_bus.cpp  ut_optional.cpp  ut_range.cpp  ut_singleton.cpp  ut_spsc_queue.cpp  ut_string.cpp  ut_string_view.cpp  ut_thread.cpp  ut_threadpool.cpp  ut_timestamp.cpp  ut_type.cpp  ut_utility.cpp  ut_variant.cpp  ut_version.cpp  ut_weak_callback.cpp
